# rust-rapidsnark

./: Cargo.toml  README.md  build.rs  clone_rapidsnark.sh
.cargo/: config.toml
.github/workflows/: build-and-test.yml
crates/: Cargo.toml  README.md  build.rs  download_rapidsnark.sh
crates/rapidsnark/aarch64-apple-darwin/: librapidsnark.dylib
crates/rapidsnark/aarch64-apple-ios-sim/: librapidsnark.dylib
crates/rapidsnark/x86_64-apple-ios/: librapidsnark.dylib
crates/src/: lib.rs
rapidsnark/aarch64-apple-ios/: librapidsnark.dylib
rapidsnark/x86_64-apple-darwin/: librapidsnark.dylib
scripts/: rapidsnark_build_dir.sh
src/: lib.rs
test-vectors/: keccak256_256_test.vkey.json
tests/: Cargo.toml  build.rs
tests/src/: lib.rs
tests/test-vectors/: multiplier2.vkey.json
