[package]
name = "rust-rapidsnark"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.95"
ark-bn254 = "0.4.0"
ark-circom = { git = "https://github.com/zkmopro/circom-compat.git", version = "0.1.0", branch = "wasm-delete" }
num-bigint = "0.4.6"
rust-witness = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[build-dependencies]
cc = "1.0"
rust-witness = "0.1.2"
