[package]
name = "rust-rapidsnark"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.95"
num-bigint = "0.4.6"
rust-witness = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
num-traits = "0.2.19"

[build-dependencies]
cc = "1.0"
rust-witness = "0.1.2"
