[package]
name = "rust-rapidsnark"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/rust-rapidsnark"
documentation = "https://zkmopro.org/"
homepage = "https://zkmopro.org/"
description = "Rust wrapper for the Rapidsnark proof system"

[lib]

[dependencies]
anyhow = "1.0.95"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[build-dependencies]
cc = "1.0"
